Fix structure transfer hardening and client test launcher